# CS372Spring2020ExampleCode

./: .clang-format  Armor.cpp  Armor.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Composite.cpp  Composite.hpp  Door.hpp  Expression.cpp  Expression.hpp  HomeAutomationComponent.hpp  MP3Player.cpp  MP3Player.hpp  MP3PlayerState.cpp  StoreByPointer.hpp  StoreByReference.hpp  Subject.cpp  main.cpp  moderncppexamples.cpp  moderncppexamples.hpp
